# FUOTA-project

./: .gitmodules  CMakeLists.txt
sources/Common/: CMakeLists.txt
sources/ConnectivityStack/: CMakeLists.txt
sources/RaucManager/: CMakeLists.txt
